--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
